--- a/src/style/partials/sprite.scss
+++ b/src/style/partials/sprite.scss
@@ -19,9 +19,9 @@ $appr-icon-offset-y: 0px;
 $appr-icon-width: 19px;
 $appr-icon-height: 19px;
 $appr-icon-total-width: 81px;
-$appr-icon-total-height: 990px;
+$appr-icon-total-height: 1040px;
 $appr-icon-image: '../images/sprite.png';
-$appr-icon: (0px, 0px, 0px, 0px, 19px, 19px, 81px, 990px, '../images/sprite.png', 'appr-icon', );
+$appr-icon: (0px, 0px, 0px, 0px, 19px, 19px, 81px, 1040px, '../images/sprite.png', 'appr-icon', );
 $burger-mob-name: 'burger-mob';
 $burger-mob-x: 0px;
 $burger-mob-y: 24px;
@@ -30,9 +30,9 @@ $burger-mob-offset-y: -24px;
 $burger-mob-width: 23px;
 $burger-mob-height: 15px;
 $burger-mob-total-width: 81px;
-$burger-mob-total-height: 990px;
+$burger-mob-total-height: 1040px;
 $burger-mob-image: '../images/sprite.png';
-$burger-mob: (0px, 24px, 0px, -24px, 23px, 15px, 81px, 990px, '../images/sprite.png', 'burger-mob', );
+$burger-mob: (0px, 24px, 0px, -24px, 23px, 15px, 81px, 1040px, '../images/sprite.png', 'burger-mob', );
 $burger-name: 'burger';
 $burger-x: 0px;
 $burger-y: 44px;
@@ -41,9 +41,9 @@ $burger-offset-y: -44px;
 $burger-width: 23px;
 $burger-height: 15px;
 $burger-total-width: 81px;
-$burger-total-height: 990px;
+$burger-total-height: 1040px;
 $burger-image: '../images/sprite.png';
-$burger: (0px, 44px, 0px, -44px, 23px, 15px, 81px, 990px, '../images/sprite.png', 'burger', );
+$burger: (0px, 44px, 0px, -44px, 23px, 15px, 81px, 1040px, '../images/sprite.png', 'burger', );
 $bx-pager-link-hover-name: 'bx-pager-link-hover';
 $bx-pager-link-hover-x: 0px;
 $bx-pager-link-hover-y: 64px;
@@ -52,9 +52,9 @@ $bx-pager-link-hover-offset-y: -64px;
 $bx-pager-link-hover-width: 20px;
 $bx-pager-link-hover-height: 20px;
 $bx-pager-link-hover-total-width: 81px;
-$bx-pager-link-hover-total-height: 990px;
+$bx-pager-link-hover-total-height: 1040px;
 $bx-pager-link-hover-image: '../images/sprite.png';
-$bx-pager-link-hover: (0px, 64px, 0px, -64px, 20px, 20px, 81px, 990px, '../images/sprite.png', 'bx-pager-link-hover', );
+$bx-pager-link-hover: (0px, 64px, 0px, -64px, 20px, 20px, 81px, 1040px, '../images/sprite.png', 'bx-pager-link-hover', );
 $bx-pager-link-name: 'bx-pager-link';
 $bx-pager-link-x: 0px;
 $bx-pager-link-y: 89px;
@@ -63,9 +63,9 @@ $bx-pager-link-offset-y: -89px;
 $bx-pager-link-width: 20px;
 $bx-pager-link-height: 20px;
 $bx-pager-link-total-width: 81px;
-$bx-pager-link-total-height: 990px;
+$bx-pager-link-total-height: 1040px;
 $bx-pager-link-image: '../images/sprite.png';
-$bx-pager-link: (0px, 89px, 0px, -89px, 20px, 20px, 81px, 990px, '../images/sprite.png', 'bx-pager-link', );
+$bx-pager-link: (0px, 89px, 0px, -89px, 20px, 20px, 81px, 1040px, '../images/sprite.png', 'bx-pager-link', );
 $clok-menu-name: 'clok-menu';
 $clok-menu-x: 0px;
 $clok-menu-y: 114px;
@@ -74,9 +74,9 @@ $clok-menu-offset-y: -114px;
 $clok-menu-width: 74px;
 $clok-menu-height: 45px;
 $clok-menu-total-width: 81px;
-$clok-menu-total-height: 990px;
+$clok-menu-total-height: 1040px;
 $clok-menu-image: '../images/sprite.png';
-$clok-menu: (0px, 114px, 0px, -114px, 74px, 45px, 81px, 990px, '../images/sprite.png', 'clok-menu', );
+$clok-menu: (0px, 114px, 0px, -114px, 74px, 45px, 81px, 1040px, '../images/sprite.png', 'clok-menu', );
 $company-icon-name: 'company-icon';
 $company-icon-x: 0px;
 $company-icon-y: 164px;
@@ -85,9 +85,9 @@ $company-icon-offset-y: -164px;
 $company-icon-width: 54px;
 $company-icon-height: 66px;
 $company-icon-total-width: 81px;
-$company-icon-total-height: 990px;
+$company-icon-total-height: 1040px;
 $company-icon-image: '../images/sprite.png';
-$company-icon: (0px, 164px, 0px, -164px, 54px, 66px, 81px, 990px, '../images/sprite.png', 'company-icon', );
+$company-icon: (0px, 164px, 0px, -164px, 54px, 66px, 81px, 1040px, '../images/sprite.png', 'company-icon', );
 $crane-min-name: 'crane-min';
 $crane-min-x: 0px;
 $crane-min-y: 235px;
@@ -96,9 +96,9 @@ $crane-min-offset-y: -235px;
 $crane-min-width: 19px;
 $crane-min-height: 19px;
 $crane-min-total-width: 81px;
-$crane-min-total-height: 990px;
+$crane-min-total-height: 1040px;
 $crane-min-image: '../images/sprite.png';
-$crane-min: (0px, 235px, 0px, -235px, 19px, 19px, 81px, 990px, '../images/sprite.png', 'crane-min', );
+$crane-min: (0px, 235px, 0px, -235px, 19px, 19px, 81px, 1040px, '../images/sprite.png', 'crane-min', );
 $link-ico-name: 'link-ico';
 $link-ico-x: 0px;
 $link-ico-y: 259px;
@@ -107,9 +107,9 @@ $link-ico-offset-y: -259px;
 $link-ico-width: 11px;
 $link-ico-height: 19px;
 $link-ico-total-width: 81px;
-$link-ico-total-height: 990px;
+$link-ico-total-height: 1040px;
 $link-ico-image: '../images/sprite.png';
-$link-ico: (0px, 259px, 0px, -259px, 11px, 19px, 81px, 990px, '../images/sprite.png', 'link-ico', );
+$link-ico: (0px, 259px, 0px, -259px, 11px, 19px, 81px, 1040px, '../images/sprite.png', 'link-ico', );
 $lock-name: 'lock';
 $lock-x: 0px;
 $lock-y: 283px;
@@ -118,135 +118,146 @@ $lock-offset-y: -283px;
 $lock-width: 9px;
 $lock-height: 14px;
 $lock-total-width: 81px;
-$lock-total-height: 990px;
+$lock-total-height: 1040px;
 $lock-image: '../images/sprite.png';
-$lock: (0px, 283px, 0px, -283px, 9px, 14px, 81px, 990px, '../images/sprite.png', 'lock', );
+$lock: (0px, 283px, 0px, -283px, 9px, 14px, 81px, 1040px, '../images/sprite.png', 'lock', );
+$map-link-b-name: 'map-link-b';
+$map-link-b-x: 0px;
+$map-link-b-y: 302px;
+$map-link-b-offset-x: 0px;
+$map-link-b-offset-y: -302px;
+$map-link-b-width: 49px;
+$map-link-b-height: 45px;
+$map-link-b-total-width: 81px;
+$map-link-b-total-height: 1040px;
+$map-link-b-image: '../images/sprite.png';
+$map-link-b: (0px, 302px, 0px, -302px, 49px, 45px, 81px, 1040px, '../images/sprite.png', 'map-link-b', );
 $map-link-w-name: 'map-link-w';
 $map-link-w-x: 0px;
-$map-link-w-y: 302px;
+$map-link-w-y: 352px;
 $map-link-w-offset-x: 0px;
-$map-link-w-offset-y: -302px;
+$map-link-w-offset-y: -352px;
 $map-link-w-width: 49px;
 $map-link-w-height: 45px;
 $map-link-w-total-width: 81px;
-$map-link-w-total-height: 990px;
+$map-link-w-total-height: 1040px;
 $map-link-w-image: '../images/sprite.png';
-$map-link-w: (0px, 302px, 0px, -302px, 49px, 45px, 81px, 990px, '../images/sprite.png', 'map-link-w', );
+$map-link-w: (0px, 352px, 0px, -352px, 49px, 45px, 81px, 1040px, '../images/sprite.png', 'map-link-w', );
 $map-link-name: 'map-link';
 $map-link-x: 0px;
-$map-link-y: 352px;
+$map-link-y: 402px;
 $map-link-offset-x: 0px;
-$map-link-offset-y: -352px;
+$map-link-offset-y: -402px;
 $map-link-width: 49px;
 $map-link-height: 45px;
 $map-link-total-width: 81px;
-$map-link-total-height: 990px;
+$map-link-total-height: 1040px;
 $map-link-image: '../images/sprite.png';
-$map-link: (0px, 352px, 0px, -352px, 49px, 45px, 81px, 990px, '../images/sprite.png', 'map-link', );
+$map-link: (0px, 402px, 0px, -402px, 49px, 45px, 81px, 1040px, '../images/sprite.png', 'map-link', );
 $mark-map-1-name: 'mark-map-1';
 $mark-map-1-x: 0px;
-$mark-map-1-y: 402px;
+$mark-map-1-y: 452px;
 $mark-map-1-offset-x: 0px;
-$mark-map-1-offset-y: -402px;
+$mark-map-1-offset-y: -452px;
 $mark-map-1-width: 39px;
 $mark-map-1-height: 53px;
 $mark-map-1-total-width: 81px;
-$mark-map-1-total-height: 990px;
+$mark-map-1-total-height: 1040px;
 $mark-map-1-image: '../images/sprite.png';
-$mark-map-1: (0px, 402px, 0px, -402px, 39px, 53px, 81px, 990px, '../images/sprite.png', 'mark-map-1', );
+$mark-map-1: (0px, 452px, 0px, -452px, 39px, 53px, 81px, 1040px, '../images/sprite.png', 'mark-map-1', );
 $mark-map-2-name: 'mark-map-2';
 $mark-map-2-x: 0px;
-$mark-map-2-y: 460px;
+$mark-map-2-y: 510px;
 $mark-map-2-offset-x: 0px;
-$mark-map-2-offset-y: -460px;
+$mark-map-2-offset-y: -510px;
 $mark-map-2-width: 53px;
 $mark-map-2-height: 73px;
 $mark-map-2-total-width: 81px;
-$mark-map-2-total-height: 990px;
+$mark-map-2-total-height: 1040px;
 $mark-map-2-image: '../images/sprite.png';
-$mark-map-2: (0px, 460px, 0px, -460px, 53px, 73px, 81px, 990px, '../images/sprite.png', 'mark-map-2', );
+$mark-map-2: (0px, 510px, 0px, -510px, 53px, 73px, 81px, 1040px, '../images/sprite.png', 'mark-map-2', );
 $mark-map-3-name: 'mark-map-3';
 $mark-map-3-x: 0px;
-$mark-map-3-y: 538px;
+$mark-map-3-y: 588px;
 $mark-map-3-offset-x: 0px;
-$mark-map-3-offset-y: -538px;
+$mark-map-3-offset-y: -588px;
 $mark-map-3-width: 81px;
 $mark-map-3-height: 128px;
 $mark-map-3-total-width: 81px;
-$mark-map-3-total-height: 990px;
+$mark-map-3-total-height: 1040px;
 $mark-map-3-image: '../images/sprite.png';
-$mark-map-3: (0px, 538px, 0px, -538px, 81px, 128px, 81px, 990px, '../images/sprite.png', 'mark-map-3', );
+$mark-map-3: (0px, 588px, 0px, -588px, 81px, 128px, 81px, 1040px, '../images/sprite.png', 'mark-map-3', );
 $nav-asid-icon-1-name: 'nav-asid-icon-1';
 $nav-asid-icon-1-x: 0px;
-$nav-asid-icon-1-y: 671px;
+$nav-asid-icon-1-y: 721px;
 $nav-asid-icon-1-offset-x: 0px;
-$nav-asid-icon-1-offset-y: -671px;
+$nav-asid-icon-1-offset-y: -721px;
 $nav-asid-icon-1-width: 63px;
 $nav-asid-icon-1-height: 61px;
 $nav-asid-icon-1-total-width: 81px;
-$nav-asid-icon-1-total-height: 990px;
+$nav-asid-icon-1-total-height: 1040px;
 $nav-asid-icon-1-image: '../images/sprite.png';
-$nav-asid-icon-1: (0px, 671px, 0px, -671px, 63px, 61px, 81px, 990px, '../images/sprite.png', 'nav-asid-icon-1', );
+$nav-asid-icon-1: (0px, 721px, 0px, -721px, 63px, 61px, 81px, 1040px, '../images/sprite.png', 'nav-asid-icon-1', );
 $nav-asid-icon-2-name: 'nav-asid-icon-2';
 $nav-asid-icon-2-x: 0px;
-$nav-asid-icon-2-y: 737px;
+$nav-asid-icon-2-y: 787px;
 $nav-asid-icon-2-offset-x: 0px;
-$nav-asid-icon-2-offset-y: -737px;
+$nav-asid-icon-2-offset-y: -787px;
 $nav-asid-icon-2-width: 58px;
 $nav-asid-icon-2-height: 52px;
 $nav-asid-icon-2-total-width: 81px;
-$nav-asid-icon-2-total-height: 990px;
+$nav-asid-icon-2-total-height: 1040px;
 $nav-asid-icon-2-image: '../images/sprite.png';
-$nav-asid-icon-2: (0px, 737px, 0px, -737px, 58px, 52px, 81px, 990px, '../images/sprite.png', 'nav-asid-icon-2', );
+$nav-asid-icon-2: (0px, 787px, 0px, -787px, 58px, 52px, 81px, 1040px, '../images/sprite.png', 'nav-asid-icon-2', );
 $nav-asid-icon-3-name: 'nav-asid-icon-3';
 $nav-asid-icon-3-x: 0px;
-$nav-asid-icon-3-y: 794px;
+$nav-asid-icon-3-y: 844px;
 $nav-asid-icon-3-offset-x: 0px;
-$nav-asid-icon-3-offset-y: -794px;
+$nav-asid-icon-3-offset-y: -844px;
 $nav-asid-icon-3-width: 67px;
 $nav-asid-icon-3-height: 67px;
 $nav-asid-icon-3-total-width: 81px;
-$nav-asid-icon-3-total-height: 990px;
+$nav-asid-icon-3-total-height: 1040px;
 $nav-asid-icon-3-image: '../images/sprite.png';
-$nav-asid-icon-3: (0px, 794px, 0px, -794px, 67px, 67px, 81px, 990px, '../images/sprite.png', 'nav-asid-icon-3', );
+$nav-asid-icon-3: (0px, 844px, 0px, -844px, 67px, 67px, 81px, 1040px, '../images/sprite.png', 'nav-asid-icon-3', );
 $nav-asid-icon-4-name: 'nav-asid-icon-4';
 $nav-asid-icon-4-x: 0px;
-$nav-asid-icon-4-y: 866px;
+$nav-asid-icon-4-y: 916px;
 $nav-asid-icon-4-offset-x: 0px;
-$nav-asid-icon-4-offset-y: -866px;
+$nav-asid-icon-4-offset-y: -916px;
 $nav-asid-icon-4-width: 63px;
 $nav-asid-icon-4-height: 64px;
 $nav-asid-icon-4-total-width: 81px;
-$nav-asid-icon-4-total-height: 990px;
+$nav-asid-icon-4-total-height: 1040px;
 $nav-asid-icon-4-image: '../images/sprite.png';
-$nav-asid-icon-4: (0px, 866px, 0px, -866px, 63px, 64px, 81px, 990px, '../images/sprite.png', 'nav-asid-icon-4', );
+$nav-asid-icon-4: (0px, 916px, 0px, -916px, 63px, 64px, 81px, 1040px, '../images/sprite.png', 'nav-asid-icon-4', );
 $phone-name: 'phone';
 $phone-x: 0px;
-$phone-y: 935px;
+$phone-y: 985px;
 $phone-offset-x: 0px;
-$phone-offset-y: -935px;
+$phone-offset-y: -985px;
 $phone-width: 11px;
 $phone-height: 17px;
 $phone-total-width: 81px;
-$phone-total-height: 990px;
+$phone-total-height: 1040px;
 $phone-image: '../images/sprite.png';
-$phone: (0px, 935px, 0px, -935px, 11px, 17px, 81px, 990px, '../images/sprite.png', 'phone', );
+$phone: (0px, 985px, 0px, -985px, 11px, 17px, 81px, 1040px, '../images/sprite.png', 'phone', );
 $video-name: 'video';
 $video-x: 0px;
-$video-y: 957px;
+$video-y: 1007px;
 $video-offset-x: 0px;
-$video-offset-y: -957px;
+$video-offset-y: -1007px;
 $video-width: 35px;
 $video-height: 33px;
 $video-total-width: 81px;
-$video-total-height: 990px;
+$video-total-height: 1040px;
 $video-image: '../images/sprite.png';
-$video: (0px, 957px, 0px, -957px, 35px, 33px, 81px, 990px, '../images/sprite.png', 'video', );
+$video: (0px, 1007px, 0px, -1007px, 35px, 33px, 81px, 1040px, '../images/sprite.png', 'video', );
 $spritesheet-width: 81px;
-$spritesheet-height: 990px;
+$spritesheet-height: 1040px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($appr-icon, $burger-mob, $burger, $bx-pager-link-hover, $bx-pager-link, $clok-menu, $company-icon, $crane-min, $link-ico, $lock, $map-link-w, $map-link, $mark-map-1, $mark-map-2, $mark-map-3, $nav-asid-icon-1, $nav-asid-icon-2, $nav-asid-icon-3, $nav-asid-icon-4, $phone, $video, );
-$spritesheet: (81px, 990px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($appr-icon, $burger-mob, $burger, $bx-pager-link-hover, $bx-pager-link, $clok-menu, $company-icon, $crane-min, $link-ico, $lock, $map-link-b, $map-link-w, $map-link, $mark-map-1, $mark-map-2, $mark-map-3, $nav-asid-icon-1, $nav-asid-icon-2, $nav-asid-icon-3, $nav-asid-icon-4, $phone, $video, );
+$spritesheet: (81px, 1040px, '../images/sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
