--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,8 +1,10 @@
 
   <script src="js/jquery.min.js"></script>
+
   <script src="js/jquery.bxslider.min.js"></script>
   <script src="js/jquery.formstyler.min.js"></script>
   <script src="js/ion.rangeSlider.min.js"></script>
+  <script src="js/source/jquery.fancybox.js"></script>
   <script src="js/script.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCB7wB4D8Iszke6RkWbPHfpvmh7cuf72Oc"
     type="text/javascript"></script>
