--- a/src/template/head.html
+++ b/src/template/head.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/ion.rangeSlider.css">
     <link rel="stylesheet" href="css/ion.rangeSlider.skinHTML5.css">
     <link rel="stylesheet" href="js/source/jquery.fancybox.css">
+    <link rel="stylesheet" href="css/jquery.mCustomScrollbar.css">
     <link rel="stylesheet" href="css/style.css">
 
 
