--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,13 +1,22 @@
 
   <script src="js/jquery.min.js"></script>
 
+
+
   <script src="js/jquery.bxslider.min.js"></script>
   <script src="js/jquery.formstyler.min.js"></script>
   <script src="js/ion.rangeSlider.min.js"></script>
   <script src="js/source/jquery.fancybox.js"></script>
+  <script src="js/jquery.mCustomScrollbar.js"></script>
   <script src="js/script.js"></script>
+
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCB7wB4D8Iszke6RkWbPHfpvmh7cuf72Oc"
     type="text/javascript"></script>
     <script src="js/google-map.js"></script>
+
+
+
+
+
 </body>
 </html>
